<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black_effect">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:id="@+id/page_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_view_header_height"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/create_account"
            android:textSize="@dimen/header_text_size"
            android:textColor="@color/page_header_text_color"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/user_default"
                android:scaleType="fitXY"
                android:background="@drawable/list_item_touchable"
                android:contentDescription="@string/desc"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/account_icon"
                android:inputType="textVisiblePassword|textNoSuggestions|textCapSentences"
                android:paddingLeft="5dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:singleLine="true"
                android:maxLength="50"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/first_name_hint"
                android:textColorHint="@drawable/editor_hint_selector"
                android:textColor="@color/white_effect"
                android:textSize="@dimen/login_screen_edit_font_size"
                android:background="@drawable/rounded_edittext">
            </EditText>
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@+id/account_icon"
                android:layout_below="@+id/first_name"
                android:inputType="textVisiblePassword|textNoSuggestions|textCapSentences"
                android:paddingLeft="5dp"
                android:paddingBottom="2dp"
                android:paddingTop="2dp"
                android:singleLine="true"
                android:maxLength="50"
                android:scrollbars="horizontal"
                android:scrollHorizontally="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/last_name_hint"
                android:textColorHint="@drawable/editor_hint_selector"
                android:textColor="@color/white_effect"
                android:textSize="@dimen/login_screen_edit_font_size"
                android:background="@drawable/rounded_edittext">
            </EditText>
        </RelativeLayout>

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="phone"
            android:paddingLeft="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:maxLength="50"
            android:scrollbars="horizontal"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/phone_nbr_hint"
            android:textColorHint="@drawable/editor_hint_selector"
            android:textColor="@color/white_effect"
            android:textSize="@dimen/login_screen_edit_font_size"
            android:background="@drawable/rounded_edittext">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/email_loginname_instructions"
            android:textColor="@color/white_effect"/>
        <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:paddingLeft="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:maxLength="50"
            android:scrollbars="horizontal"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textSize="@dimen/login_screen_edit_font_size"
            android:hint="@string/email_address_hint"
            android:textColorHint="@drawable/editor_hint_selector"
            android:textColor="@color/white_effect"
            android:background="@drawable/rounded_edittext">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/password_instructions"
            android:textColor="@color/white_effect"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:singleLine="true"
            android:maxLength="50"
            android:scrollbars="horizontal"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/new_password_hint"
            android:textColorHint="@drawable/editor_hint_selector"
            android:textColor="@color/white_effect"
            android:textSize="@dimen/login_screen_edit_font_size"
            android:background="@drawable/rounded_edittext">
        </EditText>
        <EditText
            android:id="@+id/retyped_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="50"
            android:scrollbars="horizontal"
            android:scrollHorizontally="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/new_password_again_hint"
            android:textColorHint="@drawable/editor_hint_selector"
            android:textColor="@color/white_effect"
            android:textSize="@dimen/login_screen_edit_font_size"
            android:background="@drawable/rounded_edittext">
        </EditText>
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="onClickOk"
            android:text="@string/button_sign_up"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"/>
    </LinearLayout>
</ScrollView>