<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:padding="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/round_dialog_white"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:id="@+id/verification_code_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/waiting_for_admin_code"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/login_screen_info_font_size"/>
    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:singleLine="true"
        android:maxLength="50"
        android:scrollbars="horizontal"
        android:scrollHorizontally="true"
        android:hint="@string/insert_admin_code_hint"
        android:textColorHint="@drawable/editor_hint_selector_grey"
        android:textColor="@color/dark_grey"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/rounded_edittext_grey">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/button_ok"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_shape_grey"
            android:layout_weight="1"/>
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/button_cancel"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_shape_grey"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>