<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@drawable/round_dialog">
    <TextView
        android:id="@+id/exit_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/exit_application_query"
        android:textColor="@color/white_effect"
        android:textSize="@dimen/header_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/button_cancel"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:background="@drawable/button_shape"
            android:layout_weight="1"/>
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/button_exit"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:background="@drawable/button_shape"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>