<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:padding="10dp"
    android:layout_gravity="center"
    android:background="@drawable/round_dialog">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/tracker_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/tracker_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                android:src="@drawable/tracker"/>
            <TextView
                android:id="@+id/tracker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracker"
                android:textSize="@dimen/header_text_size"
                android:layout_centerInParent="true"
                android:textColor="@color/white_effect"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/washed_dark_blue_fa"
                android:layout_below="@+id/tracker_icon"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tracker_info"
            android:text="@string/about_tracker_imei"
            android:textColor="@color/white_effect"
            android:textSize="@dimen/about_tracker_font_size"/>
        <com.thingsee.tracker.views.ClearTextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/button_ok"
            android:layout_below="@+id/about"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:background="@drawable/button_shape"
            android:layout_weight="1"/>
    </RelativeLayout>
</LinearLayout>