<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="150dp"
    android:layout_marginRight="150dp"
    android:layout_centerHorizontal="true"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/round_dialog">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/black_effect">
            <ImageView
                android:id="@+id/tracker_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:layout_alignParentLeft="true"
                android:src="@drawable/tracker_default"
                android:adjustViewBounds="true"
                android:contentDescription="@string/desc" />
            <TextView
                android:id="@+id/tracker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/tracker_image"
                android:layout_centerVertical="true"
                android:text="@string/tracker"
                android:textColor="@color/white_effect"
                android:textSize="@dimen/tracker_name_view_text_size"/>
            <ImageView
                android:id="@+id/edit_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/edit_tracker"
                android:tint="@color/white_effect"
                android:clickable="true"
                android:onClick="OnClickEditTracker"
                android:background="@drawable/list_item_touchable"
                android:contentDescription="@string/desc" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white_effect">
        <TextView
            android:id="@+id/tracker_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/menu_about"
            android:textColor="@color/black_effect"
            android:textSize="@dimen/menu_item_font_size"
            android:clickable="true"
            android:onClick="onClickAbout"
            android:background="@drawable/list_item_touchable"/>
        <TextView
            android:id="@+id/tracker_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/menu_tracker_remove"
            android:textColor="@color/black_effect"
            android:textSize="@dimen/menu_item_font_size"
            android:clickable="true"
            android:onClick="OnClickRemoveTracker"
            android:background="@drawable/list_item_touchable"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>