<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginLeft="150dp"
    android:layout_marginRight="150dp"
    android:layout_marginTop="40dp"
    android:background="@drawable/round_dialog"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/tracker_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/tracker"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/desc"/>
                <EditText
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tracker_icon"
                    android:layout_marginLeft="20dp"
                    android:padding="5dp"
                    android:layout_centerVertical="true"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:scrollbars="horizontal"
                    android:scrollHorizontally="true"
                    android:hint="@string/display_name_hint"
                    android:textColorHint="@drawable/editor_hint_selector"
                    android:textColor="@color/white_effect"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:background="@drawable/rounded_edittext">
                </EditText>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">
                <com.thingsee.tracker.views.ClearTextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="@string/button_cancel"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_shape"
                    android:layout_weight="1"/>
                <com.thingsee.tracker.views.ClearTextView
                    android:id="@+id/save_changes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:clickable="true"
                    android:text="@string/button_save"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_shape"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>